added width and height attributes so browser knows size

--- a/XB PointStream/index.html
+++ b/XB PointStream/index.html
@@ -100,7 +100,7 @@
   </head>
 
   <body>
-   <canvas datasrc= "xb.js" style="float: left;" id="cvs"></canvas>
+   <canvas datasrc="xb.js" style="float: left;" id="cvs" width="500" height="500"></canvas>
    <span id="La_title">Downloading <span class="file">mickey.asc</span>: ..</span><span class ="prog" id="load_percent">0%</span><br />
    <span id="Pa_title"></span><span class ="prog" id="parse_percent"></span><br />
    <span id="NP_title"></span><span class ="prog" id="num_points"></span><br />
