replaced pjs matrix with mjs M4x4

--- a/demos/acorn1.html
+++ b/demos/acorn1.html
@@ -2,7 +2,9 @@
 
   <head>
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <script src="../mjs.js"></script>
     <script src="../processing_trans.js"></script>
+
     <script>
       var filename = "acorn1.asc";
       var lightOn = true;
