--- a/demos/acorn1.html
+++ b/demos/acorn1.html
@@ -3,26 +3,16 @@
   <head>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <script src="../mjs.js"></script>
-    <script src="../processing_trans.js"></script>
+    <script src="../pointstream.js"></script>
 
     <script>
       var filename = "acorn1.asc";
-      var lightOn = true;
-      var drawOctree = true;
     </script>
   </head>
 
-  <body onload="document.getElementById('filename').innerHTML = filename;">
-   <canvas id="canvas" width="500" height="500"></canvas>
-   
-   <span id="Filename_log">Downloading <span class="filename" id="filename"></span>: ..</span><span class="progress" id="load_percent">0%</span><br />
-   <span id="Parse_log"></span><span class="progress" id="parse_percent"></span><br />
-   <span id="NumPoints_log"></span><span class="progress" id="num_points"></span><br />
-   <span id="Octree_log"></span><span class="progress" id="octree_percent"></span><br />
-   <span id="VBO_log"></span><span class="progress" id="vbo_progress"></span><br />
-   <br />
-   <span id="fps"></span><br />
-   <span id="controls"></span>
+  <body>
+    <canvas id="canvas" width="500" height="500"></canvas>
+    <br />
   </body>
 
 </html>
