placed pointstream into a single object.

--- a/demos/acorn1.html
+++ b/demos/acorn1.html
@@ -4,10 +4,7 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
     <script src="../mjs.js"></script>
     <script src="../pointstream.js"></script>
-
-    <script>
-      var filename = "acorn1.asc";
-    </script>
+    <script src="acorn1.js"></script>
   </head>
 
   <body>
