--- a/demos/acorn1.html
+++ b/demos/acorn1.html
@@ -5,32 +5,10 @@
     <script src="../mjs.js"></script>
     <script src="../pointstream.js"></script>
     <script src="acorn1.js"></script>
-    <style>
-    .ccc{
-    margin: 0px auto;
-
-    }
-    </style>
   </head>
 
   <body>
-    <div style="position: relative;">
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse est ligula, egestas sed tempor vitae, pellentesque at massa. Nam a aliquet neque. Nulla a mauris eu lectus faucibus consectetur quis sed sem. Quisque posuere malesuada elementum. Etiam tortor purus, eleifend sit amet mattis vitae, ultrices vitae lorem. Nullam sodales risus eu nisi mollis ullamcorper. Morbi at nisl mauris. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec et eros lobortis sem lobortis luctus eget at arcu. In feugiat mollis purus in lobortis. Suspendisse sed nulla id augue dictum vulputate. Fusce lectus eros, dictum ac hendrerit sit amet, laoreet ultrices leo.
-<P>
-Morbi pellentesque, metus sit amet auctor convallis, massa lectus interdum dui, vitae auctor diam sapien vel metus. Suspendisse faucibus, erat pellentesque tristique egestas, mi justo porta velit, vitae ornare mauris metus sit amet diam. Praesent posuere dapibus eleifend. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean lorem neque, adipiscing eget egestas eget, semper rutrum velit. Praesent blandit tempor convallis. Ut scelerisque, magna pharetra consequat molestie, est arcu convallis justo, sed volutpat sem nisl vel ipsum. Donec euismod risus ut nibh accumsan eget rhoncus tellus vehicula. Etiam vulputate lorem id odio tempus quis suscipit sapien sollicitudin. Duis fringilla hendrerit elit, eget fringilla lectus consequat quis. Nunc suscipit vehicula lorem vel interdum. Sed lectus diam, mattis sed feugiat eget, ullamcorper et velit. Fusce placerat, nisi eget feugiat volutpat, leo diam porta velit, eget volutpat risus mauris sed velit.
-<P>
-Vestibulum quam augue, vehicula ut congue nec, pulvinar in risus. Morbi eget odio ac lectus porta pretium. In hac habitasse platea dictumst. Praesent libero turpis, interdum sed ultricies at, tempor ut justo. Suspendisse potenti. Phasellus venenatis, leo et accumsan ullamcorper, orci tortor hendrerit magna, nec consequat tellus metus nec neque. Duis eu dignissim nisi. Nulla convallis aliquam est, eu interdum metus malesuada non. Sed in turpis purus. Phasellus accumsan odio lacinia nisl auctor eget tempor nunc euismod. Vivamus malesuada, nibh ut congue sodales, nulla lacus elementum tellus, et mollis nibh sapien luctus dolor. Praesent egestas purus ullamcorper massa ultricies eget fermentum quam consequat. Proin augue nibh, dignissim eu tempus eget, eleifend eget sapien.
-<P>
-Vivamus at mauris velit. Pellentesque feugiat dapibus orci eu gravida. Vestibulum et ipsum lectus, quis accumsan libero. Ut sit amet odio tortor. Donec ullamcorper eleifend magna, sit amet ultricies quam placerat ut. Proin ac ante sem, quis egestas mi. Sed ultricies laoreet elit nec tempus. Curabitur metus velit, fringilla nec congue non, placerat et nibh. Nulla eget massa odio, ut imperdiet lacus. Sed venenatis bibendum faucibus. Vivamus mattis diam sagittis risus volutpat at condimentum ante ultricies. Mauris vitae congue nisi. Aliquam erat volutpat. Curabitur faucibus gravida turpis, vel eleifend risus malesuada consectetur. Ut non massa non neque ullamcorper euismod. Sed dictum leo eu mi egestas tincidunt. Nullam leo magna, interdum adipiscing condimentum ut, ullamcorper id erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent vestibulum odio sit amet nunc interdum sagittis. Maecenas egestas sodales felis sed placerat.
-<P>
-Vestibulum placerat scelerisque lectus eu facilisis. Phasellus eleifend tempus gravida. Vivamus id tortor sapien. Phasellus auctor rutrum iaculis. Phasellus vitae cursus enim. Fusce vitae mi sed nisl rhoncus mollis sed vitae enim. Vivamus arcu justo, commodo ut luctus ac, molestie vitae enim. Curabitur hendrerit, odio adipiscing volutpat cursus, lorem ante congue lectus, non scelerisque nunc tellus eget magna. Vestibulum ac sem augue, ac convallis nibh. Ut sed nisi nec tortor suscipit posuere at quis sapien. Pellentesque at lorem neque, vitae convallis diam. Etiam sagittis consequat augue, porta adipiscing lorem pretium a. Sed tincidunt turpis sem. Nunc vel quam a odio blandit accumsan. Ut porttitor porttitor vestibulum. Quisque sit amet felis blandit erat sollicitudin cursus commodo id eros.
-    </div>
-
-  
-   <div style="position: absolute; top: 60px; width: 100%">
-
-    <canvas id="canvas" class="ccc" width="500" height="500"></canvas>
-    </div>
+    <canvas id="canvas" width="500" height="500"></canvas>
   </body>
 
 </html>
