added resize function user can call to resize canvas.

--- a/demos/acorn/acorn.html
+++ b/demos/acorn/acorn.html
@@ -7,7 +7,7 @@
     <script src="acorn.js"></script>
   </head>
 
-  <body>
+  <body onLoad="start();">
     <canvas id="canvas" width="500" height="500"></canvas>
     <span id="debug"></span>
   </body>
