added mouse up, down

--- a/demos/acorn/acorn.html
+++ b/demos/acorn/acorn.html
@@ -1,7 +1,7 @@
 <html>
 
   <head>
-    <link rel="stylesheet" type="text/css" href="../style.css" />
+    <!--<link rel="stylesheet" type="text/css" href="../style.css" />-->
     <script src="../../mjs.js"></script>
     <script src="../../pointstream.js"></script>
     <script src="acorn.js"></script>
@@ -9,7 +9,6 @@
 
   <body onLoad="start();">
     <canvas id="canvas" width="500" height="500"></canvas>
-    <span id="debug"></span>
   </body>
 
 </html>
