added getDataLayout for flexible asc files, added mouse callbacks, cleaned code

--- a/demos/acorn/acorn.html
+++ b/demos/acorn/acorn.html
@@ -1,7 +1,7 @@
 <html>
 
   <head>
-    <!--<link rel="stylesheet" type="text/css" href="../style.css" />-->
+    <link rel="stylesheet" type="text/css" href="../style.css" />
     <script src="../../mjs.js"></script>
     <script src="../../pointstream.js"></script>
     <script src="acorn.js"></script>
