--- a/demos/acorn/acorn.html
+++ b/demos/acorn/acorn.html
@@ -2,8 +2,8 @@
 
   <head>
     <link rel="stylesheet" type="text/css" href="../style.css" />
-    <script src="../../mjs.js"></script>
-    <script src="../../pointstream.js"></script>
+    <!--script src="../../mjs.js"></script-->
+    <script type="application/javascript" src="../../pointstream.js"></script>
     <script src="acorn.js"></script>
   </head>
 
