--- a/demos/mickey/mickey.html
+++ b/demos/mickey/mickey.html
@@ -7,7 +7,26 @@
   </head>
 
   <body onLoad="start();">
-    <canvas id="canvas" width="500" height="500"></canvas>
+  A cross-browser JavaScript tool which will emulate Arius3D's PointStream viewer. <br />
+  It will be able to quickly render a large amount of point cloud data to the &lt;canvas &gt;<br />
+  tag using WebGL.<br />
+  A cross-browser JavaScript tool which will emulate Arius3D's PointStream viewer. <br />
+  It will be able to quickly render a large amount of point cloud data to the &lt;canvas &gt;<br />
+  tag using WebGL.<br />
+  A cross-browser JavaScript tool which will emulate Arius3D's PointStream viewer. <br />
+  It will be able to quickly render a large amount of point cloud data to the &lt;canvas &gt;<br />
+  tag using WebGL.<br />
+  A cross-browser JavaScript tool which will emulate Arius3D's PointStream viewer. <br />
+  It will be able to quickly render a large amount of point cloud data to the &lt;canvas &gt;<br />
+  tag using WebGL.<br />
+  A cross-browser JavaScript tool which will emulate Arius3D's PointStream viewer. <br />
+  It will be able to quickly render a large amount of point cloud data to the &lt;canvas &gt;<br />
+  tag using WebGL.<br />
+  A cross-browser JavaScript tool which will emulate Arius3D's PointStream viewer. <br />
+  It will be able to quickly render a large amount of point cloud data to the &lt;canvas &gt;<br />
+  tag using WebGL.<br />
+
+    <canvas id="canvas" width="500" height="500" style="position:absolute;left:0px;top:0px;"></canvas>
     <span id="debug"></span>
   </body>
 
