--- a/demos/acorn/acorn.html
+++ b/demos/acorn/acorn.html
@@ -56,6 +56,7 @@
     Constant: <span id="const"> </span><div id="constant"></div><br/>
     Linear:  <span id="lin"> </span><div id="linear"></div><br/>
     Quadratic:  <span id="quad"> </span><div id="quadratic"></div><br/>
+    <div id="test"></div>
   </body>
 
 </html>
