--- a/demos/acorn/acorn.html
+++ b/demos/acorn/acorn.html
@@ -6,6 +6,7 @@
     <script type="text/javascript" src="js/jquery-ui-1.8.2.custom.min.js"></script>
     <link rel="stylesheet" type="text/css" media="screen" href="css/ui-lightness/jquery-ui-1.8.2.custom.css" />
     
+    <link rel="stylesheet" type="text/css" href="../style.css" />
     <script src="../../pointstream.js"></script>
     <script src="acorn.js"></script>
   </head>
@@ -52,11 +53,17 @@
         });
       </script>
 
-    <canvas id="canvas" width="500" height="500"></canvas><br />  
+    <input type="button" value="Take Screenshot" onClick="addPNG();"/>
+    <input type="button" value="clear" onClick="clearPNG();"/><br />
+    <canvas id="canvas" width="500" height="500"></canvas>
+    <span id="test"></span>
+    <br />
+    <span>Last key Pressed:</span> <span id="key">None</span>
+    <br />
     Constant: <span id="const"> </span><div id="constant"></div><br/>
     Linear:  <span id="lin"> </span><div id="linear"></div><br/>
     Quadratic:  <span id="quad"> </span><div id="quadratic"></div><br/>
-    <div id="test"></div>
+ 
   </body>
 
 </html>
