--- a/demos/acorn/acorn.html
+++ b/demos/acorn/acorn.html
@@ -55,8 +55,8 @@
 
     <input type="button" value="Take Screenshot" onClick="addPNG();"/>
     <input type="button" value="clear" onClick="clearPNG();"/><br />
-    <canvas id="canvas" width="500" height="500"></canvas>
-    <span id="test"></span>
+    <canvas id="canvas" width="300" height="500"></canvas>
+    <span id="thumbnails"></span>
     <br />
     <span>Last key Pressed:</span> <span id="key">None</span>
     <br />
