--- a/demos/acorn/acorn.html
+++ b/demos/acorn/acorn.html
@@ -57,6 +57,7 @@
     <input type="button" value="clear" onClick="clearPNG();"/><br />
     <canvas id="canvas" width="300" height="500"></canvas>
     <span id="thumbnails"></span>
+    <span id="debug"></span>
     <br />
     <span>Last key Pressed:</span> <span id="key">None</span>
     <br />
