added invert scroll to acron, cleaned up code

--- a/demos/acorn/index.html
+++ b/demos/acorn/index.html
@@ -9,7 +9,8 @@
   <body onLoad="start();" bgcolor="#222" text="#FFF">
     <input type="button" value="Take Screenshot" onClick="addPNG();"/>
     <input type="button" value="clear" onClick="clearPNG();"/><br />
-    <canvas id="canvas" width="300" height="500"></canvas>
+    <canvas id="canvas" width="300" height="500"></canvas><br />
+    <span>Invert ScrollWheel:</span> <input type="checkbox" id="invertScroll" /><br />
     <span id="thumbnails"></span>
     <span id="debug"></span>
     <br />
