added invert checkbox to all demos

--- a/demos/mickey/index.html
+++ b/demos/mickey/index.html
@@ -31,7 +31,10 @@
   It will be able to quickly render a large amount of point cloud data to the &lt;canvas &gt;<br />
   tag using WebGL.<br />
 
-    <canvas id="canvas" width="500" height="500" style="position:absolute;left:0px;top:0px;"></canvas>
+    <canvas id="canvas" width="500" height="500" style="position:absolute;left:0px;top:0px;"></canvas><br />
+    <br />
+    <br />
+    <span>Invert ScroolWheel</span><input type="checkbox" id="invertScroll" /><br />
     <span id="debug"></span>
   </body>
 
