--- a/demos/lion/index.html
+++ b/demos/lion/index.html
@@ -7,7 +7,8 @@
   </head>
 
   <body onLoad="start();">
-    <canvas id="canvas" width="500" height="500" style="position:absolute;left:0px;top:0px;"></canvas>
+    <canvas id="canvas" width="500" height="500"></canvas><br />
+    <span>Invert ScrollWheel:</span><input type="checkbox" id="invertScroll" />
     <span id="debug"></span>
   </body>
 
