added fps conditional to all demos, fixed mickey demo.

--- a/demos/lion/index.html
+++ b/demos/lion/index.html
@@ -8,7 +8,7 @@
 
   <body onLoad="start();">
     <canvas id="canvas" width="500" height="500"></canvas><br />
-    <span>Invert ScrollWheel:</span><input type="checkbox" id="invertScroll" />
+    <span>Invert scroll wheel:</span><input type="checkbox" id="invertScroll" />
     <span id="debug"></span>
   </body>
 
