--- a/demos/mickey/index.html
+++ b/demos/mickey/index.html
@@ -2,39 +2,43 @@
 
   <head>
     <link rel="stylesheet" type="text/css" href="../style.css" />
-    <script src="../../pointstream.js"></script>
     <script src="mickey.js"></script>
+    <script src="../../pointstream.js"></script>
+
   </head>
 
   <body onLoad="start();">
-  A cross-browser JavaScript tool which will emulate Arius3D's PointStream viewer. <br />
-  It will be able to quickly render a large amount of point cloud data to the &lt;canvas &gt;<br />
-  tag using WebGL.<br />
-  <br />
-  A cross-browser JavaScript tool which will emulate Arius3D's PointStream viewer. <br />
-  It will be able to quickly render a large amount of point cloud data to the &lt;canvas &gt;<br />
-  tag using WebGL.<br />
-  <br />
-  A cross-browser JavaScript tool which will emulate Arius3D's PointStream viewer. <br />
-  It will be able to quickly render a large amount of point cloud data to the &lt;canvas &gt;<br />
-  tag using WebGL.<br />
-  <br />
-  A cross-browser JavaScript tool which will emulate Arius3D's PointStream viewer. <br />
-  It will be able to quickly render a large amount of point cloud data to the &lt;canvas &gt;<br />
-  tag using WebGL.<br />
-  <br />
-  A cross-browser JavaScript tool which will emulate Arius3D's PointStream viewer. <br />
-  It will be able to quickly render a large amount of point cloud data to the &lt;canvas &gt;<br />
-  tag using WebGL.<br />
-  <br />
-  A cross-browser JavaScript tool which will emulate Arius3D's PointStream viewer. <br />
-  It will be able to quickly render a large amount of point cloud data to the &lt;canvas &gt;<br />
-  tag using WebGL.<br />
+    A cross-browser JavaScript tool which will emulate Arius3D's PointStream viewer. <br />
+    It will be able to quickly render a large amount of point cloud data to the &lt;canvas &gt;<br />
+    tag using WebGL.<br />
+    <br />
+    A cross-browser JavaScript tool which will emulate Arius3D's PointStream viewer. <br />
+    It will be able to quickly render a large amount of point cloud data to the &lt;canvas &gt;<br />
+    tag using WebGL.<br />
+    <br />
+    A cross-browser JavaScript tool which will emulate Arius3D's PointStream viewer. <br />
+    It will be able to quickly render a large amount of point cloud data to the &lt;canvas &gt;<br />
+    tag using WebGL.<br />
+    <br />
+    A cross-browser JavaScript tool which will emulate Arius3D's PointStream viewer. <br />
+    It will be able to quickly render a large amount of point cloud data to the &lt;canvas &gt;<br />
+    tag using WebGL.<br />
+    <br />
+    A cross-browser JavaScript tool which will emulate Arius3D's PointStream viewer. <br />
+    It will be able to quickly render a large amount of point cloud data to the &lt;canvas &gt;<br />
+    tag using WebGL.<br />
+    <br />
+    A cross-browser JavaScript tool which will emulate Arius3D's PointStream viewer. <br />
+    It will be able to quickly render a large amount of point cloud data to the &lt;canvas &gt;<br />
+    tag using WebGL.<br />
 
     <canvas id="canvas" width="500" height="500" style="position:absolute;left:0px;top:0px;"></canvas><br />
     <br />
     <br />
-    <span>Invert ScroolWheel</span><input type="checkbox" id="invertScroll" /><br />
+    <br />
+    <br />
+    <br />        
+    <span>Invert scroll wheel</span><input type="checkbox" id="invertScroll" /><br />
     <span id="debug"></span>
   </body>
 
