--- a/demos/acorn/index.html
+++ b/demos/acorn/index.html
@@ -10,7 +10,7 @@
     <input type="button" value="Take Screenshot" onClick="addPNG();"/>
     <input type="button" value="clear" onClick="clearPNG();"/><br />
     <canvas id="canvas" width="300" height="500"></canvas><br />
-    <span>Invert ScrollWheel:</span> <input type="checkbox" id="invertScroll" /><br />
+    <span>Invert scroll wheel:</span> <input type="checkbox" id="invertScroll" /><br />
     <span id="thumbnails"></span>
     <span id="debug"></span>
     <br />
