fixed clipping issue and moved merge vbo code.

--- a/demos/acorn/index.html
+++ b/demos/acorn/index.html
@@ -8,10 +8,10 @@
 
   <body onLoad="start();" bgcolor="#222" text="#FFF">
     <input type="button" value="Take Screenshot" onClick="addPNG();"/>
-    <input type="button" value="clear" onClick="clearPNG();"/><br />
-    <canvas id="canvas" width="300" height="500"></canvas><br />
+    <input type="button" value="clear" onClick="clearPNG();"/>
+    <span id="fileStatus"></span><br />
+    <canvas id="canvas" width="300" height="500"></canvas><span id="thumbnails"></span><br />
     <span>Invert scroll wheel:</span> <input type="checkbox" id="invertScroll" /><br />
-    <span id="thumbnails"></span>
     <span id="debug"></span>
     <br />
     <span>Last key Pressed:</span> <span id="key">None</span>
