added spans to index.html files instead of window status. Cleaned code. Added webgl wrapper.

--- a/demos/lion/index.html
+++ b/demos/lion/index.html
@@ -7,6 +7,7 @@
   </head>
 
   <body onLoad="start();">
+    <span id="fileStatus"></span><br />
     <canvas id="canvas" width="500" height="500"></canvas><br />
     <span>Invert scroll wheel:</span><input type="checkbox" id="invertScroll" />
     <span id="debug"></span>
