--- a/demos/mickey/index.html
+++ b/demos/mickey/index.html
@@ -8,6 +8,7 @@
   </head>
 
   <body onLoad="start();">
+    <span id="fileStatus"></span><br />
     A cross-browser JavaScript tool which will emulate Arius3D's PointStream viewer. <br />
     It will be able to quickly render a large amount of point cloud data to the &lt;canvas &gt;<br />
     tag using WebGL.<br />
@@ -31,7 +32,6 @@
     A cross-browser JavaScript tool which will emulate Arius3D's PointStream viewer. <br />
     It will be able to quickly render a large amount of point cloud data to the &lt;canvas &gt;<br />
     tag using WebGL.<br />
-
     <canvas id="canvas" width="500" height="500" style="position:absolute;left:0px;top:0px;"></canvas><br />
     <br />
     <br />
