--- a/tests/verts_cols/index.html
+++ b/tests/verts_cols/index.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" type="text/css" href="../style.css" />
     <script src="../../pointstream.js"></script>
-    <script src="acorn.js"></script>
+    <script src="mickey.js"></script>
   </head>
 
   <body onLoad="start();" bgcolor="#222" text="#FFF">
