added fix, cleaned CSS, updated index for acorn.

--- a/demos/mickey/index.html
+++ b/demos/mickey/index.html
@@ -7,8 +7,8 @@
 
   </head>
 
-  <body onLoad="start();">
-    <span id="fileStatus"></span><br />
+  <body onLoad="start();" bgcolor="#DDD">
+    <span id="fileStatus" class="blackText"></span><br />
     A cross-browser JavaScript tool which will emulate Arius3D's PointStream viewer. <br />
     It will be able to quickly render a large amount of point cloud data to the &lt;canvas &gt;<br />
     tag using WebGL.<br />
@@ -32,13 +32,10 @@
     A cross-browser JavaScript tool which will emulate Arius3D's PointStream viewer. <br />
     It will be able to quickly render a large amount of point cloud data to the &lt;canvas &gt;<br />
     tag using WebGL.<br />
-    <canvas id="canvas" width="500" height="500" style="position:absolute;left:0px;top:0px;"></canvas><br />
+    <canvas id="canvas" width="500" height="500" style="position:absolute;left:20px;top:35px;"></canvas><br />
     <br />
-    <br />
-    <br />
-    <br />
-    <br />        
-    <span>Invert scroll wheel</span><input type="checkbox" id="invertScroll" /><br />
+    <br />     
+    <span class="blackText">Invert scroll wheel</span><input type="checkbox" id="invertScroll" /><br />
     <span id="debug"></span>
   </body>
 
