fixed lion bk color, added bug 59, fixed screenshots on chrome, added commas in num points in lion test.

--- a/demos/lion/index.html
+++ b/demos/lion/index.html
@@ -6,7 +6,7 @@
     <script src="lion.js"></script>
   </head>
 
-  <body onLoad="start();">
+  <body onLoad="start();" bgcolor="#222222">
     <span id="fileStatus"></span><br />
     <canvas id="canvas" width="500" height="500"></canvas><br />
     <span>Invert scroll wheel:</span><input type="checkbox" id="invertScroll" />
