patch mostly done. Still requires some cleanup and interface bits spec'ed out

--- a/demos/acorn/index.html
+++ b/demos/acorn/index.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" type="text/css" href="../style.css" />
     <script src="../../pointstream.js"></script>
+    <script src="../../parsers/asc.js"></script>
     <script src="acorn.js"></script>
   </head>
 
