--- a/demos/mickey/index.html
+++ b/demos/mickey/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="../style.css" />
     <script src="mickey.js"></script>
     <script src="../../pointstream.js"></script>
-
+    <script src="../../parsers/asc.js"></script>
   </head>
 
   <body onLoad="start();" bgcolor="#DDD">
