--- a/tests/xhr_timing_test/index.html
+++ b/tests/xhr_timing_test/index.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" type="text/css" href="../style.css" />
     <script src="mickey.js"></script>
+    <script src="../../parsers/asc.js"></script>
     <script src="../../pointstream.js"></script>
   </head>
 
