--- a/tests/verts_cols/index.html
+++ b/tests/verts_cols/index.html
@@ -12,13 +12,14 @@
     <h1><a href="http://zenit.senecac.on.ca/wiki/index.php/XB_PointStream">XB PointStream</a> No Normals Test</h1>
 
     <p>
-      This test makes sure the ASC parser can read in files which only<br />
-      contain position and color values and lack normals.<br />
-      If the point cloud downloads and renders in the canvas,<br />
-      the test has passed.<br />
+      This test makes sure the ASC parser can read in files which only
+      contain position and color values and lack normals.
+      If the point cloud downloads and renders in the canvas,
+      the test has passed.
+      <br />
       <br />
       
-      <canvas id="canvas" width="300" height="300"></canvas><br />
+      <canvas id="canvas" width="300" height="300"></canvas>
     </p>
     
   </body>
