--- a/demos/acorn/index.html
+++ b/demos/acorn/index.html
@@ -9,7 +9,7 @@
 
   <body onLoad="start();" bgcolor="#222222">
     <input type="button" value="Take Screenshot" onClick="addPNG();"/>
-    <input type="button" value="clear" onClick="clearPNG();"/><br />
+    <input type="button" value="clear" onClick="removeAllScreenShots();"/><br />
     
     <span>status: </span><span class="orangeText" id="fileStatus"></span><br />
     <div id="numPointsAndFPS"></div>
