--- a/demos/many_clouds/index.html
+++ b/demos/many_clouds/index.html
@@ -2,9 +2,10 @@
 
   <head>
     <!-- jQuery stuff -->  
-    <script type="text/javascript" src="jquery-1.3.2.min.js"></script>
-    <script type="text/javascript" src="jquery-ui-1.7.2.custom.min.js"></script>
-    <link rel="stylesheet" type="text/css" media="screen" href="jquery-ui-1.7.2.custom.css" />
+    <!-- jQuery/jQueryUI stuff -->  
+    <link rel="stylesheet" type="text/css" media="screen" href="css/smoothness/jquery-ui-1.8.6.custom.css" />
+    <script type="text/javascript" src="js/jquery-1.4.2.min.js"></script>
+    <script type="text/javascript" src="js/jquery-ui-1.8.6.custom.min.js"></script>
 
     <link rel="stylesheet" type="text/css" href="../style.css" />
     <script src="../../pointstream.js"></script>
@@ -16,6 +17,7 @@
     <script type="text/javascript">
       $(function() {
         $("#progressbar1").css({'height': '10px' });
+        $("#progressbar1").css({'color':  '#FF0000' });
         $("#progressbar1").progressbar({ value: 0 });
         
         $("#progressbar2").css({'height': '10px' });
