--- a/example.html
+++ b/example.html
@@ -1,8 +1,9 @@
 <html>
 
   <head>
-    <script src="../xbps.js"></script>
-    <script src="acorn.js"></script>
+    <script src="example.js"></script>
+    <script src="xbps.js"></script>
+
   </head>
 
   <body onLoad="start();">
