fixed release example(now works on branch and in releases). Fixed user parser test, fixed demos and tests.

--- a/demos/many_clouds/index.html
+++ b/demos/many_clouds/index.html
@@ -8,9 +8,8 @@
     <script type="text/javascript" src="js/jquery-ui-1.8.6.custom.min.js"></script>
 
     <link rel="stylesheet" type="text/css" href="../style.css" />
-    <script src="../../pointstream.js"></script>
-    <script src="../../parsers/asc.js"></script>
-    <script src="multi.js"></script>
+    <script src="../../xbps.js"></script>
+    <script src="many_clouds.js"></script>
   </head>
 
   <body onload="start();" bgcolor="#222222" text="#FFFFFF">
@@ -28,6 +27,9 @@
       });
     </script>
 
+    <!-- jquery prevents me from using spans for
+          elements, so I use tables instead.
+    -->
     <table>
       <tr>
         <td>
