--- a/demos/lion/index.html
+++ b/demos/lion/index.html
@@ -2,8 +2,7 @@
 
   <head>
     <link rel="stylesheet" type="text/css" href="../style.css" />
-    <script src="../../pointstream.js"></script>
-    <script src="../../parsers/asc.js"></script>
+    <script src="../../xbps.js"></script>
     <script src="lion.js"></script>
   </head>
 
