--- a/tests/verts_cols/index.html
+++ b/tests/verts_cols/index.html
@@ -3,8 +3,7 @@
   <head>
     <link rel="stylesheet" type="text/css" href="../style.css" />
     <script src="verts_colors.js"></script>
-    <script src="../../parsers/asc.js"></script>
-    <script src="../../pointstream.js"></script>
+    <script src="../../xbps.js"></script>
   </head>
 
   <body onLoad="start();">
