fixed annyong jqueryui progress bar colors

--- a/demos/many_clouds/index.html
+++ b/demos/many_clouds/index.html
@@ -16,13 +16,15 @@
     <script type="text/javascript">
       $(function() {
         $("#progressbar1").css({'height': '10px' });
-        $("#progressbar1").css({'color':  '#FF0000' });
+        $("#progressbar1").css({'background': '#000000' });
         $("#progressbar1").progressbar({ value: 0 });
         
         $("#progressbar2").css({'height': '10px' });
+        $("#progressbar2").css({'background': '#000000' });
         $("#progressbar2").progressbar({ value: 0 });
         
         $("#progressbar3").css({'height': '10px' });
+        $("#progressbar3").css({'background': '#000000' });
         $("#progressbar3").progressbar({ value: 0 });
       });
     </script>
