--- a/tests/leakedKey/index.html
+++ b/tests/leakedKey/index.html
@@ -2,8 +2,8 @@
 
   <head>
     <link rel="stylesheet" type="text/css" href="../style.css" />
-    <script src="../../pointstream.js"></script>
     <script src="acorn.js"></script>
+    <script src="../../xbps.js"></script>
   </head>
 
   <body onLoad="start();" bgcolor="#222222">
