--- a/tests/user_parser/index.html
+++ b/tests/user_parser/index.html
@@ -9,7 +9,7 @@
 
   <body onLoad="start();">
   
-    <h1><a href="http://zenit.senecac.on.ca/wiki/index.php/XB_PointStream">XB PointStream</a> Only Vertices Test</h1>
+    <h1><a href="http://zenit.senecac.on.ca/wiki/index.php/XB_PointStream">XB PointStream</a> User-defined Parser</h1>
 
       <p>
         This test makes sure the user can specify their own parser and hook it into
