added user defined shader functionality, added matrix stack, added demos

--- a/demos/many_clouds/index.html
+++ b/demos/many_clouds/index.html
@@ -1,7 +1,6 @@
 <html>
 
   <head>
-    <!-- jQuery stuff -->  
     <!-- jQuery/jQueryUI stuff -->  
     <link rel="stylesheet" type="text/css" media="screen" href="css/smoothness/jquery-ui-1.8.6.custom.css" />
     <script type="text/javascript" src="js/jquery-1.4.2.min.js"></script>
@@ -9,6 +8,8 @@
 
     <link rel="stylesheet" type="text/css" href="../style.css" />
     <script src="../../xbps.js"></script>
+    <script src="shaders/acorn_shader.js"></script>
+    <script src="shaders/mickey_shader.js"></script>
     <script src="many_clouds.js"></script>
   </head>
 
