--- a/tests/resize/index.html
+++ b/tests/resize/index.html
@@ -6,7 +6,7 @@
   </head>
 
   <body onLoad="start();" style="margin: 0px 0px 0px 0px;">
-    <canvas id="canvas"></canvas>
+    <canvas id="canvas" width="500" height="500"></canvas>
   </body>
 
 </html>
