added centered acorn, updated exmaple

--- a/example.html
+++ b/example.html
@@ -19,8 +19,8 @@ function start(){
     ps.translate(0, 0, -25);
     ps.render(acorn);
   };
-  acorn = ps.load("clouds/acorn.asc");
+  acorn = ps.load("clouds/acorn_center.asc");
 }
-  </pre>
-
+</pre>
+<span id="debug"></span>
 </html>
