--- a/demos/many_clouds/index.html
+++ b/demos/many_clouds/index.html
@@ -10,7 +10,7 @@
     <script src="../../xbps.js"></script>
     <script src="shaders/acorn_shader.js"></script>
     <script src="shaders/mickey_shader.js"></script>
-    <script src="many_clouds.js"></script>
+    <script src="js/many_clouds.js"></script>
   </head>
 
   <body onload="start();" bgcolor="#222222" text="#FFFFFF">
