--- a/demos/many_clouds/index.html
+++ b/demos/many_clouds/index.html
@@ -11,6 +11,7 @@
     <script src="shaders/acorn_shader.js"></script>
     <script src="shaders/mickey_shader.js"></script>
     <script src="js/many_clouds.js"></script>
+    <script src="js/user_asc_parser.js"></script>
   </head>
 
   <body onload="start();" bgcolor="#222222" text="#FFFFFF">
