--- a/tests/user_shader/index.html
+++ b/tests/user_shader/index.html
@@ -2,21 +2,21 @@
 
   <head>
     <link rel="stylesheet" type="text/css" href="../style.css" />
-    <script src="shaders.js"></script>
     <script src="../../xbps.js"></script>
+    <script src="shaders.js"></script>
     <script src="user_shader.js"></script>
   </head>
 
   <body onLoad="start();">
   
-    <h1><a href="http://zenit.senecac.on.ca/wiki/index.php/XB_PointStream">XB PointStream</a> User-defined Parser</h1>
+    <h1><a href="http://zenit.senecac.on.ca/wiki/index.php/XB_PointStream">XB PointStream</a> User-defined Shader</h1>
 
       <p>
-        This tests makes sure users can write their own shaders and rely on the XB PointStream
-        parser.
+        This tests makes sure users can write their own shaders and rely 
+        on the XB PointStream parser.
         <br />
         <br />
-        <canvas id="canvas" width="600" height="600"></canvas><br />
+        <canvas id="canvas" width="300" height="300"></canvas><br />
         <span id="fps"></span>
       </p>
       
