reverted to parser with normals, fixed parser bug to accept tabs, fixed makefile

--- a/example.html
+++ b/example.html
@@ -19,7 +19,7 @@ function start(){
     ps.translate(0, 0, -25);
     ps.render(acorn);
   };
-  acorn = ps.load("clouds/acorn_center.asc");
+  acorn = ps.load("clouds/acorn.asc");
 }
 </pre>
 <span id="debug"></span>
