--- a/tests/user_parser/index.html
+++ b/tests/user_parser/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="../style.css" />
     <script src="user_asc_parser.js"></script>
     <script src="../../xbps.js"></script>
-    <script src="user_parser.js"></script>
+    <script src="test.js"></script>
   </head>
 
   <body onLoad="start();">
