--- a/tests/user_shader/index.html
+++ b/tests/user_shader/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="../style.css" />
     <script src="../../xbps.js"></script>
     <script src="shaders.js"></script>
-    <script src="user_shader.js"></script>
+    <script src="test.js"></script>
   </head>
 
   <body onLoad="start();">
