--- a/example.html
+++ b/example.html
@@ -17,6 +17,7 @@ function start(){
   ps.pointSize(5);
   ps.onRender = function(){
     ps.translate(0, 0, -25);
+    ps.clear();
     ps.render(acorn);
   };
   acorn = ps.load("clouds/acorn.asc");
