shortened parser code.

--- a/tests/user_parser/index.html
+++ b/tests/user_parser/index.html
@@ -2,9 +2,9 @@
 
   <head>
     <link rel="stylesheet" type="text/css" href="../style.css" />
-    <script src="user_asc_parser.js"></script>
+    <script src="foo_parser.js"></script>
     <script src="../../xbps.js"></script>
-    <script src="test.js"></script>
+    <script src="demo.js"></script>
   </head>
 
   <body onLoad="start();">
