--- a/demos/accelerometer/index.html
+++ b/demos/accelerometer/index.html
@@ -61,6 +61,9 @@
   </head>
 
   <body onLoad="start();" bgcolor="#DDD">
-    <canvas id="canvas" width="500" height="500" style="position:absolute;left:20px;top:35px;"></canvas><br />    
+  <p>To interact with this demo, you must use Minefield with WebGL enabled on a device which has a sudden motion sensor, such as a MacBook.<br />
+  Otherwise you can <a href="http://www.youtube.com/watch?v=U37owvJj3Ws">view the video</a>.
+  </p> 
+    <canvas id="canvas" width="500" height="500"></canvas>   
   </body>
 </html>
