--- a/demos/accelerometer/index.html
+++ b/demos/accelerometer/index.html
@@ -2,7 +2,7 @@
 
   <head>
     <link rel="stylesheet" type="text/css" href="../style.css" />
-    <script src="mickey.js"></script>
+    <script src="demo.js"></script>
     <script src="../../xbps.js"></script>
 
     <script id="shader-fs" type="x-shader/x-fragment">
