added stop to pts, added stop function to pts demo, fixed sundae ref tester, fixed SMS demo to work even if device does not have SMS.

--- a/tests/stop/index.html
+++ b/tests/stop/index.html
@@ -10,9 +10,8 @@
   
     <h1><a href="http://zenit.senecac.on.ca/wiki/index.php/XB_PointStream">XB PointStream</a> parser stop() test</h1>
       <p>
-        <input id="eggenburg" type="radio" onClick="switchCloud(1);" />eggenburg<br />
-        <input id="mickey" type="radio" onClick="switchCloud(2);" />mickey<br />
-        <canvas id="canvas" width="500" height="500"></canvas><br />
+        <input id="eggenburg" type="radio" onClick="switchCloud(1);" />eggenburg &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<input id="mickey" type="radio" onClick="switchCloud(2);" />mickey<br />
+        <canvas id="canvas" width="500" height="300"></canvas><br />
       </p>
       
   </body>
