--- a/tests/pts/index.html
+++ b/tests/pts/index.html
@@ -2,7 +2,7 @@
 
   <head>
     <link rel="stylesheet" type="text/css" href="../style.css" />
-    <script src="verts.js"></script>
+    <script src="test.js"></script>
     <script src="../../xbps.js"></script>
   </head>
 
@@ -11,7 +11,6 @@
     <h1><a href="http://zenit.senecac.on.ca/wiki/index.php/XB_PointStream">XB PointStream</a> PTS Parser Test</h1>
 
       <p>
-        <br />
         <canvas id="canvas" width="500" height="500"></canvas><br />
         <span id="debug"></span>
       </p>
