--- a/tests/psi_parser/index.html
+++ b/tests/psi_parser/index.html
@@ -2,7 +2,7 @@
 
   <head>
     <link rel="stylesheet" type="text/css" href="../style.css" />
-    <script src="../../parsers/psiparser.js"></script>
+    <script src="../../parsers/psi.js"></script>
     <script src="../../xbps.js"></script>
     <script src="test.js"></script>
   </head>
@@ -12,6 +12,7 @@
     <h1><a href="http://zenit.senecac.on.ca/wiki/index.php/XB_PointStream">XB PointStream</a> PSI Parser</h1>
 
       <p>
+        This test uses the PSI Parser along with Mickey_Mouse.psi to render the point cloud.
         <br />
         <br />
         <canvas id="canvas" width="300" height="300"></canvas><br />
