--- a/demos/museum/index.html
+++ b/demos/museum/index.html
@@ -14,7 +14,7 @@
   </style>
   
   <body>
-    <canvas id="museum" data-processing-sources = "museum.js User.js Keyboard.js Utils.js"></canvas>
+    <canvas id="museum" data-processing-sources = "museum.js user.js keyboard.js utils.js"></canvas>
     <canvas id="xbps" width="400" height="300" style="opacity:0; position:absolute;top: 100; left: 200px; -moz-box-shadow:0px 0px 20px black;"></canvas>
     <span id="debug"></span>
   </body>
