added fix, added comments, added toggle control.

--- a/demos/accelerometer/index.html
+++ b/demos/accelerometer/index.html
@@ -61,9 +61,10 @@
   </head>
 
   <body onLoad="start();" bgcolor="#DDD">
-  <p>To interact with this demo, you must use Minefield with WebGL enabled on a device which has a sudden motion sensor, such as a MacBook.<br />
+  <p>To interact with this demo, you require at least version 4 of Firefox with WebGL enabled on a device which has a sudden motion sensor, such as a MacBook.<br />
   Otherwise you can <a href="http://www.youtube.com/watch?v=U37owvJj3Ws">view the video</a>.
   </p> 
-    <canvas id="canvas" width="500" height="500"></canvas>   
+    <input type="checkbox" id="invert" /> Invert X axis<br />
+    <canvas id="canvas" width="500" height="500"></canvas>
   </body>
 </html>
