cleaned, fixed bugs.

--- a/demos/museum/index.html
+++ b/demos/museum/index.html
@@ -23,6 +23,7 @@
       So set opacity to 0.
     -->
     <canvas id="xbps" width="400" height="400" style="opacity:0; position:absolute;top: 100; left: 200px; -moz-box-shadow:0px 0px 20px black;"></canvas>
-    <span id="debug"></span>
+    <span id="pjsFPS"></span><span style="width:30px;"></span>
+    <span id="xbpsFPS"></span>
   </body>
 </html>
