added a simple demo, moved demos to shader folder, updated resize demo.

--- a/tests/resize/index.html
+++ b/tests/resize/index.html
@@ -3,9 +3,27 @@
   <head>
     <script src="../../xbps.js"></script>
     <script src="acorn.js"></script>
+    <style>
+    body{
+      margin:0px 0px 0px 0px;
+      background: rgb(128,128,128);
+    }
+    
+    html{
+      overflow-x: hidden;
+      overflow-y: hidden;
+    }
+    canvas{
+      width: 500px;
+      height: 500px;
+      position: absolute;
+      left: 0px;
+      top: 0px;
+    }
+    </style>
   </head>
 
-  <body onLoad="start();" style="margin: 0px 0px 0px 0px;">
+  <body onLoad="start();">
     <canvas id="canvas" width="500" height="500"></canvas>
   </body>
 
