--- a/tests/user_shader/index.html
+++ b/tests/user_shader/index.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" type="text/css" href="../style.css" />
     <script src="../../xbps.js"></script>
-    <script src="shaders.js"></script>
+    <script src="../../shaders/scanline.js"></script>
     <script src="test.js"></script>
   </head>
 
