--- a/tests/user_parser_and_shader/index.html
+++ b/tests/user_parser_and_shader/index.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" type="text/css" href="../style.css" />
     <script src="../../xbps.js"></script>
-    <script src="user_shader.js"></script>
+    <script src="../../shaders/reflection.js"></script>
     <script src="user_asc_parser.js"></script>
     <script src="test.js"></script>
   </head>
