added code to straddle the vertex arrays, added jsdoc comments, cleaned code, removed unused vars, updated Fixed function shader, cleaned up accel demo, fixed whitespace.

--- a/tests/psi_parser/index.html
+++ b/tests/psi_parser/index.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" type="text/css" href="../style.css" />
     <script src="../../xbps.js"></script>
+    <script src="../../shaders/fixed_function.js"></script>
     <script src="test.js"></script>
   </head>
 
@@ -14,7 +15,7 @@
         This test uses the PSI Parser along with Mickey_Mouse.psi to render the point cloud.
         <br />
         <br />
-        <canvas id="canvas" width="300" height="300"></canvas><br />
+        <canvas id="canvas" width="500" height="500"></canvas><br />
       </p>
       
   </body>
