--- a/demos/museum/index.html
+++ b/demos/museum/index.html
@@ -3,6 +3,7 @@
     <script src="../../xbps.js"></script>
     <script src="processing.js"></script>
     <script src="podium.obj"></script>
+    <script src="../../shaders/fixed_function.js"></script>
   </head> 
   <style>
   html{
