more work on demo.

--- a/demos/all_shaders/index.html
+++ b/demos/all_shaders/index.html
@@ -3,6 +3,7 @@
     <script src="../../shaders/reflection.js"></script>
     <script src="../../shaders/fixed_function.js"></script>
     <script src="../../shaders/cartoon.js"></script>
+    <script src="../../shaders/xray.js"></script>
     <script src="../../xbps.js"></script>
     <script src="demo.js"></script>
     <style>
@@ -15,8 +16,8 @@
   <body onLoad="start(1);">
     <canvas id="1" width="250" height="350"></canvas>
     <canvas id="2" width="250" height="350"></canvas>
-    <canvas id="3" width="300" height="300"></canvas>
-    <canvas id="4" width="300" height="300"></canvas>
-    <canvas id="5" width="300" height="300"></canvas>
+    <canvas id="3" width="250" height="300"></canvas>
+    <canvas id="4" width="250" height="300"></canvas>
+    <canvas id="5" width="250" height="300"></canvas>
   </body>
 </html>
