--- a/demos/all_shaders/index.html
+++ b/demos/all_shaders/index.html
@@ -4,6 +4,7 @@
     <script src="../../shaders/fixed_function.js"></script>
     <script src="../../shaders/cartoon.js"></script>
     <script src="../../shaders/xray.js"></script>
+    <script src="../../shaders/gooch.js"></script>
     <script src="../../xbps.js"></script>
     <script src="demo.js"></script>
     <style>
