added greyscale shader.

--- a/demos/all_shaders/index.html
+++ b/demos/all_shaders/index.html
@@ -5,6 +5,7 @@
     <script src="../../shaders/cartoon.js"></script>
     <script src="../../shaders/xray.js"></script>
     <script src="../../shaders/gooch.js"></script>
+    <script src="../../shaders/greyscale.js"></script>
     <script src="../../xbps.js"></script>
     <script src="demo.js"></script>
     <style>
