--- a/demos/museum/index.html
+++ b/demos/museum/index.html
@@ -23,7 +23,7 @@
       canvas since the user won't be looking at a point cloud object.
       So set opacity to 0.
     -->
-    <canvas id="xbps" width="400" height="400" style="opacity:0; position:absolute;top: 100; left: 200px; -moz-box-shadow:0px 0px 20px black;"></canvas>
+    <canvas id="xbps" width="400" height="400" style="opacity:0; border-radius:15px;position:absolute;top: 100; left: 200px; -moz-box-shadow:0px 0px 20px black;"></canvas>
     <span id="pjsFPS"></span><span style="width:30px;"></span>
     <span id="xbpsFPS"></span>
   </body>
