--- a/demos/acorn/index.html
+++ b/demos/acorn/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="../style.css" />
     <script src="../../xbps.js"></script>
     <script src="../../mjs.js"></script>
-    <script src="cam.js"></script>
+    <script src="orbitcam.js"></script>
     <script src="acorn.js"></script>
   </head>
 
