--- a/demos/lion/index.html
+++ b/demos/lion/index.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" type="text/css" href="../style.css" />
     <script src="../../xbps.js"></script>
+    <script src="../../libs/orbitcam.js"></script>
     <script src="lion.js"></script>
   </head>
 
