fixed more demos.

--- a/demos/drag and drop/index.html
+++ b/demos/drag and drop/index.html
@@ -1,8 +1,9 @@
 <html>
   <head>
     <script src="../../xbps.js"></script>
-    <script src="demo.js"></script>
+    <script src="../../libs/orbitcam.js"></script>
     <script src="../../shaders/fixed_function.js"></script>
+    <script src="demo.js"></script>
     
     <style>
     body{
