--- a/demos/acorn/index.html
+++ b/demos/acorn/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" type="text/css" href="../style.css" />
     <script src="../../xbps.js"></script>
     <script src="../../libs/orbitcam.js"></script>
+    <script src="../../shaders/fixed_function.js"></script>
     <script src="acorn.js"></script>
   </head>
 
@@ -14,7 +15,7 @@
     <span>status: </span><span class="orangeText" id="fileStatus"></span><br />
     <div id="numPointsAndFPS"></div>
     
-    <canvas id="canvas" width="300" height="500"></canvas><span id="thumbnails"></span><br />
+    <canvas id="canvas" width="300" height="300"></canvas><span id="thumbnails"></span><br />
     <span>Invert scroll wheel:</span> <input type="checkbox" id="invertScroll" /><br />
     <span id="debug"></span>
     <br />
