--- a/tests/psi_parser/index.html
+++ b/tests/psi_parser/index.html
@@ -3,7 +3,6 @@
   <head>
     <link rel="stylesheet" type="text/css" href="../style.css" />
     <script src="../../xbps.js"></script>
-    <script src="../../shaders/fixed_function.js"></script>
     <script src="test.js"></script>
   </head>
 
@@ -12,8 +11,7 @@
     <h1><a href="http://zenit.senecac.on.ca/wiki/index.php/XB_PointStream">XB PointStream</a> PSI Parser</h1>
 
       <p>
-        This test uses the PSI Parser along with Mickey_Mouse.psi to render the point cloud.
-        <br />
+        Test the PSI Parser<br />
         <br />
         <canvas id="canvas" width="500" height="500"></canvas><br />
       </p>
