fixed a few sundae bugs.

--- a/tools/sundae/index.html
+++ b/tools/sundae/index.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html>
   <head>
     <title>Sundae</title>
@@ -17,10 +17,10 @@
         </td>
       </tr><tr>
         <td>Tolerance:</td>
-        <td><input type="text" size="2" id="epsilon" value="5"/>%</td>
+        <td><input type="text" size="2" id="epsilon" value="15"/>%</td>
       </tr><tr>
         <td>Blur Radius:</td>
-        <td><input type="text" size="2" id="sigma" value="2"/>px</td>
+        <td><input type="text" size="2" id="sigma" value="5"/>px</td>
       </tr></table>
     </div>
     <script type="text/javascript">
