--- a/example.html
+++ b/example.html
@@ -9,18 +9,20 @@
     <canvas id="canvas" style="border: 1px solid black;" width="400" height="400"></canvas>
   </body>
   <pre>
-var ps, acorn;
-
 function start(){
-  ps = new PointStream();
-  ps.setup(document.getElementById('canvas'));
+  var ps = new PointStream();
+  ps.setup(document.getElementById("canvas"));
+  
+  var acorn = ps.load("../../clouds/acorn.psi");  
+  
   ps.pointSize(5);
   ps.onRender = function(){
+    var c = acorn.getCenter();
+    ps.translate(-c[0], -c[1], -c[2]);
     ps.translate(0, 0, -25);
     ps.clear();
     ps.render(acorn);
   };
-  acorn = ps.load("clouds/acorn.asc");
 }
 </pre>
 </html>
