added ortho and perspective functions, changed simple demo to use mask

--- a/demos/mickey/index.html
+++ b/demos/mickey/index.html
@@ -8,6 +8,7 @@
 
   <body onLoad="start();" bgcolor="#DDD">
     <span id="fileStatus" class="blackText"></span><br />
+    <div style="width:580px;color:#000">
     A cross-browser JavaScript tool which will emulate Arius3D's PointStream viewer. <br />
     It will be able to quickly render a large amount of point cloud data to the &lt;canvas &gt;<br />
     tag using WebGL.<br />
@@ -31,11 +32,8 @@
     A cross-browser JavaScript tool which will emulate Arius3D's PointStream viewer. <br />
     It will be able to quickly render a large amount of point cloud data to the &lt;canvas &gt;<br />
     tag using WebGL.<br />
+    </div>
     <canvas id="canvas" width="500" height="500" style="position:absolute;left:20px;top:35px;"></canvas><br />
-    <br />
-    <br />
-    <br />
-    <br />     
     <span class="blackText">Invert scroll wheel</span><input type="checkbox" id="invertScroll" /><br />
     <span id="debug"></span>
   </body>
