--- a/example.html
+++ b/example.html
@@ -12,16 +12,15 @@
 function start(){
   var ps = new PointStream();
   ps.setup(document.getElementById("canvas"));
+  var pointCloud = ps.load("clouds/mask_70K.psi");
   
-  var acorn = ps.load("../../clouds/acorn.psi");  
-  
-  ps.pointSize(5);
+  ps.pointSize(8);
   ps.onRender = function(){
-    var c = acorn.getCenter();
+    var c = pointCloud.getCenter();
     ps.translate(-c[0], -c[1], -c[2]);
-    ps.translate(0, 0, -25);
+    ps.translate(0, 0, -55);
     ps.clear();
-    ps.render(acorn);
+    ps.render(pointCloud);
   };
 }
 </pre>
