Added visible human point cloud, added demo, removed console.log calls in camera, fixed drag and drop referencing old camera lib file. added line in orbit camera init.

--- a/demos/drag and drop/index.html
+++ b/demos/drag and drop/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <script src="../../xbps.js"></script>
-    <script src="../../libs/orbitcam.js"></script>
+    <script src="../../libs/c3.js"></script>
     <script src="demo.js"></script>
     
     <style>
