--- a/demos/acorn/index.html
+++ b/demos/acorn/index.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" type="text/css" href="../style.css" />
     <script src="../../xbps.js"></script>
-    <script src="../../libs/orbitcam.js"></script>
+    <script src="../../libs/c3.js"></script>
     <script src="../../shaders/fixed_function.js"></script>
     <script src="acorn.js"></script>
   </head>
