fixed sms support in Firefox, Minefield and Chromium.

--- a/demos/accelerometer/index.html
+++ b/demos/accelerometer/index.html
@@ -7,7 +7,7 @@
   </head>
 
   <body onLoad="start();" bgcolor="#DDD">
-  <p>To interact with this demo, you require at least version 4 of Firefox with WebGL enabled on a device which has a sudden motion sensor, such as a MacBook.<br />
+  <p>To interact with this demo, you require a WebGL-enabled browser on a device which has a sudden motion sensor.<br />
   Otherwise you can <a href="http://www.youtube.com/watch?v=U37owvJj3Ws">view the video</a>.
   </p> 
     <input type="checkbox" id="invert" /> Invert X axis<br />
