Converted asc_exporter Blender script to use newest version of blender, renamed acorn demo to screenshot, added fix to render clouds with only verts and normals and added test.

--- a/demos/freecam/index.html
+++ b/demos/freecam/index.html
@@ -3,7 +3,7 @@
   <head>
     <script src="../../xbps.js"></script>
     <script src="../../libs/c3.js"></script>
-    <script src="lion.js"></script>
+    <script src="demo.js"></script>
   </head>
 
   <body onLoad="start();" style="margin-left:0px;margin-top:0px;overflow-x: hidden; overflow-y: hidden;">
