--- a/demos/screenshot/index.html
+++ b/demos/screenshot/index.html
@@ -5,7 +5,7 @@
     <script src="../../xbps.js"></script>
     <script src="../../libs/c3.js"></script>
     <script src="../../shaders/fixed_function.js"></script>
-    <script src="acorn.js"></script>
+    <script src="demo.js"></script>
   </head>
 
   <body onLoad="start();" bgcolor="#222222">
