--- a/demos/projection/index.html
+++ b/demos/projection/index.html
@@ -1,7 +1,7 @@
 <html>
 
   <head>
-    <link rel="stylesheet" type="text/css" href="../style.css" />
+<!--    <link rel="stylesheet" type="text/css" href="../style.css" /> -->
     <script src="../../xbps.js"></script>
     <script src="../../libs/c3.js"></script>
     <script src="demo.js"></script>
@@ -12,11 +12,11 @@
     <table>
       <tr>
         <td>
-          Perspective<br />
+          Perspective - FPS: <span id="perFPS">0</span><br />
           <canvas id="canvas" width="500" height="500"></canvas>
         </td>
         <td>
-          Orthographic<br />
+          Orthographic - FPS: <span id="orthoFPS">0</span><br />
           <canvas id="ortho" width="500" height="500"></canvas>
         </td>
       </tr>
