started experimenting with octree/frustum culling + lod

--- a/example.html
+++ b/example.html
@@ -8,20 +8,6 @@
   <body onLoad="start();">
     <canvas id="canvas" style="border: 1px solid black;" width="400" height="400"></canvas>
   </body>
-  <pre>
-function start(){
-  var ps = new PointStream();
-  ps.setup(document.getElementById("canvas"));
-  var pointCloud = ps.load("clouds/mask_70K.psi");
-  
-  ps.pointSize(8);
-  ps.onRender = function(){
-    var c = pointCloud.getCenter();
-    ps.translate(-c[0], -c[1], -c[2]);
-    ps.translate(0, 0, -55);
-    ps.clear();
-    ps.render(pointCloud);
-  };
-}
-</pre>
+<span id="debug"></span>
+
 </html>
